--- a/WDP Project Final/js_test.html
+++ b/WDP Project Final/js_test.html
@@ -3,8 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <script src="js/lib/jquery-2.1.3.js"></script>
-    <script src="js/dispo-utils.js"></script>
     <script src="js/dispo-object-spec.js"></script>
+    <script src="js/dispo-static-data.js"></script>
+    <script src="js/dispo-utils.js"></script>
     <script src="js/dispo.js"></script>
     <title></title>
 </head>
