--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -1,3 +1,8 @@
+<!--
+/**
+ * Created by Tom on 03.01.15.
+ */
+-->
 <!DOCTYPE html>
 <html>
 <head lang="de">
@@ -19,7 +24,8 @@
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBt7ZWih3_mpR9Sleq3qQhDkqhwqhBNXNQ&amp;v=3&amp;sensor=true"></script>
     <script src="js/lib/jquery-2.1.3.js"></script>
     <script src="js/GMaps.js"></script>
-
+    <script src="js/dispo-object-spec.js"></script>
+    <script src="js/dispo-static-data.js"></script>
 </head>
 <body>
 <!-- PLACEHOLDER FOR ERROR MESSAGES -->
@@ -27,7 +33,21 @@
 <br>
 
 <div id="pageMain" class="page-main-area">
+    <br>
+    <!-- customer information sidebar -->
+    <aside class="page-sidebar">
+        <h2>Customer Information</h2>
 
+        <form id="customerSelection">
+            <select id="custSel">
+
+            </select>
+        </form>
+        <br>
+
+        <h2>Contacts</h2>
+    </aside>
+    <br>
     <section class="page-content">
         <form id="form1">
             <input id="text1" type="text"/><br>
@@ -63,16 +83,7 @@
     <div id="gMaps">
         <!-- PLACEHOLDER FOR GMAPS -->
     </div>
-    <br>
-    <!-- customer information sidebar -->
-    <aside class="page-sidebar">
-        <h2>Customer Information</h2>
-        -- POST-HENDL-FANKTSCH'N --
-        <br>
 
-        <h2>Contacts</h2>
-    </aside>
-    <br>
 </div>
 </body>
 </html>
