--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -23,7 +23,8 @@
     <!-- include javascript files -->
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBt7ZWih3_mpR9Sleq3qQhDkqhwqhBNXNQ&amp;v=3&amp;sensor=true"></script>
     <script src="js/lib/jquery-2.1.3.js"></script>
-    <script src="js/GMaps.js"></script>
+    <script src="js/lib/jquery-ui-1.11.2/jquery-ui.min.js"></script>
+    <script src="GMaps.js"></script>
     <script src="js/dispo-object-spec.js"></script>
     <script src="js/dispo-static-data.js"></script>
 </head>
@@ -40,12 +41,18 @@
 
         <form id="customerSelection">
             <select id="custSel">
-
+                <!-- Placeholder for Customers -->
             </select>
         </form>
         <br>
 
         <h2>Contacts</h2>
+
+        <form id="contactSelection">
+            <select id="contSel">
+                <!-- Placeholder for Contacts -->
+            </select>
+        </form>
     </aside>
     <br>
     <section class="page-content">
