first project import (WebStorm)

--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="css/layout.css"/>
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css"/>
     <link rel="stylesheet" type="text/css" href="css/print.css" media="print"/>
+    <link rel="stylesheet" type="text/css" href="lib/jquery-ui-1.11.2/jquery-ui.css">
 
     <!-- fonts from google fonts api -->
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
@@ -27,6 +28,8 @@
     <script src="GMaps.js"></script>
     <script src="js/dispo-object-spec.js"></script>
     <script src="js/dispo-static-data.js"></script>
+
+    <script src="/lib/jquery-ui-1.11.2/jquery-ui.js"></script>
 </head>
 <body>
 <!-- PLACEHOLDER FOR ERROR MESSAGES -->
