--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" type="text/css" href="css/layout.css"/>
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css"/>
     <link rel="stylesheet" type="text/css" href="css/print.css" media="print"/>
-    <link rel="stylesheet" type="text/css" href="lib/jquery-ui-1.11.2/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="js/lib/jquery-ui-1.11.2/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="js/lib/jquery-ui-1.11.2/jquery-ui.theme.css">
+
 
     <!-- fonts from google fonts api -->
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
@@ -24,12 +26,11 @@
     <!-- include javascript files -->
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBt7ZWih3_mpR9Sleq3qQhDkqhwqhBNXNQ&amp;v=3&amp;sensor=true"></script>
     <script src="js/lib/jquery-2.1.3.js"></script>
-    <script src="js/lib/jquery-ui-1.11.2/jquery-ui.min.js"></script>
     <script src="GMaps.js"></script>
     <script src="js/dispo-object-spec.js"></script>
     <script src="js/dispo-static-data.js"></script>
 
-    <script src="/lib/jquery-ui-1.11.2/jquery-ui.js"></script>
+    <script src="js/lib/jquery-ui-1.11.2/jquery-ui.js"></script>
 </head>
 <body>
 <!-- PLACEHOLDER FOR ERROR MESSAGES -->
