--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -26,7 +26,7 @@
     <!-- include javascript files -->
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBt7ZWih3_mpR9Sleq3qQhDkqhwqhBNXNQ&amp;v=3&amp;sensor=true"></script>
     <script src="js/lib/jquery-2.1.3.js"></script>
-    <script src="GMaps.js"></script>
+    <script src="js/GMaps.js"></script>
     <script src="js/dispo-object-spec.js"></script>
     <script src="js/dispo-static-data.js"></script>
 
