--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -18,18 +18,15 @@
     <link rel="stylesheet" type="text/css" href="css/print.css" media="print"/>
     <link rel="stylesheet" type="text/css" href="js/lib/jquery-ui-1.11.2/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="js/lib/jquery-ui-1.11.2/jquery-ui.theme.css">
-
-
     <!-- fonts from google fonts api -->
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
-
     <!-- include javascript files -->
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBt7ZWih3_mpR9Sleq3qQhDkqhwqhBNXNQ&amp;v=3&amp;sensor=true"></script>
     <script src="js/lib/jquery-2.1.3.js"></script>
     <script src="js/GMaps.js"></script>
     <script src="js/dispo-object-spec.js"></script>
     <script src="js/dispo-static-data.js"></script>
-
+    <script src="js/dispo-renderer.js"></script>
     <script src="js/lib/jquery-ui-1.11.2/jquery-ui.js"></script>
 </head>
 <body>
@@ -56,7 +53,17 @@
             <select id="contSel">
                 <!-- Placeholder for Contacts -->
             </select>
+
+            <div id="contactEditForm">
+                <br><label>LastName</label><br><input type="text" value="lastName" id="contactLastName"/>
+                <br><label>FirstName</label><br><input type="text" value="firstName" id="contactFirstName"/>
+                <br><label>Email</label><br><input type="email" value="email" id="contactEmail"/>
+                <br><label>Phone</label><br><input type="text" value="phone" id="contactPhone"/>
+                <br><input type="submit" value="saveContact"/></input>
+            </div>
+
         </form>
+
     </aside>
     <br>
     <section class="page-content">
