- removed brakes from form elements. will be done via css

--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -49,19 +49,16 @@
 
         <h2>Contacts</h2>
 
-        <form id="contactSelection">
-            <select id="contSel">
-                <!-- Placeholder for Contacts -->
-            </select>
-
-            <div id="contactEditForm">
-                <br><label>LastName</label><br><input type="text" value="lastName" id="contactLastName"/>
-                <br><label>FirstName</label><br><input type="text" value="firstName" id="contactFirstName"/>
-                <br><label>Email</label><br><input type="email" value="email" id="contactEmail"/>
-                <br><label>Phone</label><br><input type="text" value="phone" id="contactPhone"/>
-                <br><input type="submit" value="saveContact"/></input>
+        <form id="contactEditForm">
+            <div class="contact-form-container">
+                <select id="contSel">
+                </select>
+                <label>LastName</label><br><input type="text" value="lastName" id="contactLastName"/>
+                <label>FirstName</label><br><input type="text" value="firstName" id="contactFirstName"/>
+                <label>Email</label><br><input type="email" value="email" id="contactEmail"/>
+                <label>Phone</label><br><input type="text" value="phone" id="contactPhone"/>
+                <input type="submit" value="saveContact"/></input>
             </div>
-
         </form>
 
     </aside>
