- finally got event listener working on contact selection. Should work now

--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -27,6 +27,7 @@
     <script src="js/dispo-object-spec.js"></script>
     <script src="js/dispo-static-data.js"></script>
     <script src="js/dispo-renderer.js"></script>
+    <script src="js/dispo-handlers.js"></script>
     <script src="js/lib/jquery-ui-1.11.2/jquery-ui.js"></script>
 </head>
 <body>
