first project import (WebStorm)

--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -47,7 +47,7 @@
                 <!-- Placeholder for Customers -->
                 <label>Company</label><br><input type="text" value="compName" id="compName"/>
                 <label>Street</label><br><input type="text" value="compStreet" id="compStreet"/>
-                <label>ZipCode/City</label><br><input type="email" value="compZipCode" id="compZipCode"/>
+                <label>ZipCode/City</label><br><input type="text" value="compZipCode" id="compZipCode"/>
                 <label>Country</label><br><input type="text" value="compCountry" id="compCountry"/>
                 <input type="submit" value="saveCompany"/></input>
 
