first project import (WebStorm)

--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -74,7 +74,7 @@
             <form id="dispositionForm">
                 <label>Anzahl Positionen</label><br><input type="text" value="0" id="countPositions"/>
                 <label>Summe Gewicht</label><br><input type="text" value="0" id="sumWeight"/>
-                <label>Sendungsnummer</label><br><input type="email" value="Sendungsnummer" id="notficationNumber"/>
+                <label>Sendungsnummer</label><br><input type="text" value="Sendungsnummer" id="notficationNumber"/>
                 <label>Lieferanten Nummer</label><br><input type="text" value="Ihre Lieferantennummer"
                                                             id="supplierNumber"/>
                 <input id="resetButton" type="submit" value="save"/></input>
