--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -117,10 +117,10 @@
         <!-- ITEM CONTAINER FORM (edit existing or add new Item) -->
         <div class="itemContainer">
             <form id="itemForm">
-                <label>ArtikelNr</label><input type="text" value="Item#" id="itemNumber"/>
-                <label>Artikel</label><input type="text" value="ItemDescription" id="itemDescription"/>
+                <label>ArtikelNr</label><input type="text" value="Item#" id="itemNumber"/><br>
+                <label>Artikelname</label><input type="text" value="ItemDescription" id="itemDescription"/><br>
                 <label>Anzahl (Stk)</label><input type="number" value="ItemQty" id="itemQuantity"/>
-                <label>Gewicht (kg)</label><input type="number" value="ItemWeight" id="itemQeight"/>
+                <label>Gewicht (kg)</label><input type="number" value="ItemWeight" id="itemWeight"/><br>
                 <input type="submit" id="addItem" value="add"/>
                 <input type="submit" id="saveChanges" value="save" (>
             </form>
