first project import (WebStorm)

--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -117,8 +117,8 @@
         <!-- ITEM CONTAINER FORM (edit existing or add new Item) -->
         <div class="itemContainer">
             <form id="itemForm">
-                <label>ArtikelNr</label><input type="text" value="Item#" id="itemNumber"/><br>
-                <label>Artikelname</label><input type="text" value="ItemDescription" id="itemDescription"/><br>
+                <label>ArtikelNr</label><br><input type="text" value="Item#" id="itemNumber"/><br>
+                <label>Artikelname</label><br><input type="text" value="ItemDescription" id="itemDescription"/><br>
                 <label>Anzahl (Stk)</label><input type="number" value="ItemQty" id="itemQuantity"/>
                 <label>Gewicht (kg)</label><input type="number" value="ItemWeight" id="itemWeight"/><br>
                 <input type="submit" id="addItem" value="add"/>
