first project import (WebStorm)

--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -122,7 +122,7 @@
                 <label>Anzahl (Stk)</label><input type="number" value="ItemQty" id="itemQuantity"/>
                 <label>Gewicht (kg)</label><input type="number" value="ItemWeight" id="itemWeight"/><br>
                 <input type="submit" id="addItem" value="add"/>
-                <input type="submit" id="saveChanges" value="save" (>
+                <input type="submit" id="saveChanges" value="save"/>
             </form>
         </div>
 
