first project import (WebStorm)

--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -76,9 +76,10 @@
                 <label>Summe Gewicht</label><br><input type="text" value="0" id="sumWeight"/>
                 <label>Sendungsnummer</label><br><input type="text" value="Sendungsnummer" id="notficationNumber"/>
                 <label>Lieferanten Nummer</label><br><input type="text" value="Ihre Lieferantennummer"
-                                                            id="supplierNumber"/>
-                <input id="resetButton" type="submit" value="save"/></input>
-                <input type="submit" value="reset"/></input>
+                                                            id="supplierNumber"/><br>
+                <input id="saveButton" type="button" value="save"/></input>
+                <input id="resetButton" type="button" value="reset"/></input>
+                <input id="addPositionButton" type="button" value="addPosition"/></input>
 
             </form>
         </div>
