--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -96,23 +96,16 @@
         <div>
             <style type="text/css">
                 /* show the move cursor as the user moves the mouse over the panel header.*/
-                #draggablePanelList .panel-heading {
+                #positionList .panel-item-header {
                     cursor: move;
                 }
             </style>
 
 
             <!-- Bootstrap 3 panel list. -->
-            <ul id="draggablePanelList" class="list-unstyled">
-                <li class="panel panel-info">
-                    <div class="panel-heading">You can drag this panel.</div>
-                    <div class="panel-body">Content ...</div>
-                </li>
-                <li class="panel panel-info">
-                    <div class="panel-heading">You can drag this panel too.</div>
-                    <div class="panel-body">Content ...</div>
-                </li>
+            <ul id="positionList" class="list-unstyled">
             </ul>
+
         </div>
 
         <!-- ITEM CONTAINER FORM (edit existing or add new Item) -->
