--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -23,10 +23,11 @@
     <!-- include javascript files -->
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBt7ZWih3_mpR9Sleq3qQhDkqhwqhBNXNQ&amp;v=3&amp;sensor=true"></script>
     <script src="js/lib/jquery-2.1.3.js"></script>
-    <script src="js/GMaps.js"></script>
+    <script src="js/dispo-geocode-handler.js"></script>
     <script src="js/dispo-object-spec.js"></script>
     <script src="js/dispo-static-data.js"></script>
     <script src="js/dispo-renderer.js"></script>
+    <script src="js/dispo-geocode-handler.js"></script>
     <script src="js/dispo-handlers.js"></script>
     <script src="js/lib/jquery-ui-1.11.2/jquery-ui.js"></script>
     <script src="js/lib/bootstrap/bootstrap.js"></script>
@@ -105,7 +106,6 @@
             <!-- Bootstrap 3 panel list. -->
             <ul id="positionList" class="list-unstyled">
             </ul>
-
         </div>
 
         <!-- ITEM CONTAINER FORM (edit existing or add new Item) -->
