- added jquery ui theme - included this theme in the main.html

--- a/WDP Project Final/main.html
+++ b/WDP Project Final/main.html
@@ -11,11 +11,16 @@
 
     <!-- include css stylesheets -->
 
-    <link rel="stylesheet" type="text/css" href="css/base.css"/>
+    <!--<link rel="stylesheet" type="text/css" href="css/base.css"/>
     <link rel="stylesheet" type="text/css" href="js/lib/bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" type="text/css" href="js/lib/jquery-ui-1.11.2/jquery-ui.css">
-    <link rel="stylesheet" type="text/css" href="js/lib/jquery-ui-1.11.2/jquery-ui.theme.css">
+    <link rel="stylesheet" type="text/css" href="js/lib/jquery-ui-1.11.2/jquery-ui.theme.css">-->
     <!-- fonts from google fonts api -->
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+    <link href='css/jquery-themes/jquery-ui.css' rel='stylesheet' type='text/css'>
+    <link href='css/jquery-themes/jquery-ui.theme.css' rel='stylesheet' type='text/css'>
+    <link href='css/jquery-themes/jquery-ui.css' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
     <!-- include javascript files -->
     <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBt7ZWih3_mpR9Sleq3qQhDkqhwqhBNXNQ&amp;v=3&amp;sensor=true"></script>
